k8s/base/navybattle-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navybattle-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: navybattle-api
  template:
    metadata:
      labels:
        app: navybattle-api
    spec:
      containers:
      - name: wisdom
        image: linuxacademycontent/wisdomapi:v1
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: navybattle-api-service
spec:
  selector:
    app: navybattle-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
